api key management

--- a/rails_app/app/views/main/home.html.erb
+++ b/rails_app/app/views/main/home.html.erb
@@ -1,6 +1,6 @@
 <script type="text/javascript">
-  var CLIENT_ID = '740796495805.apps.googleusercontent.com';
-  var SCOPES = 'https://www.googleapis.com/auth/drive';
+  var CLIENT_ID = GOOGLE_DRIVE_CLIENT_ID
+  var SCOPES = GOOGLE_DRIVE_SCOPES
 
   /**
   * Called when the client library is loaded to start the auth flow.
