styling with bootstrap

--- a/rails_app/app/views/main/home.html.erb
+++ b/rails_app/app/views/main/home.html.erb
@@ -6,7 +6,7 @@
 <div id="user-info">
 </div>
 
-<table id="explorer" class="table table-bordered">
+<table id="explorer" class="table table-bordered table-hover">
   <thead>
     <tr>
       <th>#</th>
