--- a/rails_app/app/assets/stylesheets/application.css
+++ b/rails_app/app/assets/stylesheets/application.css
@@ -11,7 +11,7 @@
  *= require twitter/bootstrap
  *= require_self
  */
-
+/*
 body {
   padding-top: 40px;
   padding-bottom: 40px;
@@ -52,3 +52,4 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+*/
