direct link to download link

--- a/rails_app/app/views/main/home.html.erb
+++ b/rails_app/app/views/main/home.html.erb
@@ -12,7 +12,7 @@
       <th>#</th>
       <th>File Type</th>
       <th>File Name</th>
-      <th>Direct Link</th>
+      <th>Download Link</th>
       <th>Preview Link</th>
     </tr>
   </thead>
