--- a/rails_app/app/views/main/home.html.erb
+++ b/rails_app/app/views/main/home.html.erb
@@ -6,14 +6,11 @@
 <div id="user-info">
 </div>
 
-<table id="explorer" class="table table-bordered table-hover">
+<table id="explorer" class="table table-hover">
   <thead>
     <tr>
-      <th>#</th>
-      <th>File Type</th>
       <th>File Name</th>
-      <th>Direct Link</th>
-      <th>Preview Link</th>
+      <th>Download Link</th>
     </tr>
   </thead>
   <tbody>
