--- a/rails_app/app/views/main/home.html.erb
+++ b/rails_app/app/views/main/home.html.erb
@@ -6,7 +6,8 @@
 <div id="user-info">
 </div>
 
-<table id="explorer" class="table table-hover">
+<button id="photo-album" class="btn btn-lg btn-primary btn-block" type="submit">Photo Album</button>
+<table id="explorer" class="table table-bordered table-hover">
   <thead>
     <tr>
       <th>File Name</th>
