--- a/rails_app/app/views/main/home.html.erb
+++ b/rails_app/app/views/main/home.html.erb
@@ -3,8 +3,8 @@
   <button id="btn-authorize" class="btn btn-lg btn-primary btn-block" type="submit">Authorize</button>
 </form>
 
-<div id="user-info">
-</div>
+<ul id="user-info">
+</ul>
 
 <table id="explorer" class="table table-hover">
   <thead>
