simple photo viewer

--- a/rails_app/app/views/main/home.html.erb
+++ b/rails_app/app/views/main/home.html.erb
@@ -17,3 +17,7 @@
   <tbody>
   </tbody>
 </table>
+
+<div id="photos">
+  <img class="img-thumbnail" src="https://dl.dropboxusercontent.com/1/view/0b1ctddll87n6b9/IMG_4592.JPG">
+</div>
