--- a/rails_app/app/assets/stylesheets/application.css
+++ b/rails_app/app/assets/stylesheets/application.css
@@ -9,6 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require twitter/bootstrap
+ *= require videojs/video-js
  *= require_self
  */
 .glyphicon {
